fix online alignment

--- a/components/list/List.scss
+++ b/components/list/List.scss
@@ -25,6 +25,10 @@
   padding: 0 0;
 }
 
+.List-row--oneline .List-row-text-primary {
+  margin-bottom: 0px;
+}
+
 .List-row-text-secondary, .List-row-text-subheader {
   font-size: 14px;
   line-height: 19px;
